POM minor change